Added the new resume to the resume link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" style="font-size: 1.8vh;" href="#Skills-and-Experience">Skills & Experience</a>
           </li>
           <li class="nav-item me-md-3">
-            <a class="nav-link" style="font-size: 1.8vh;" href="Documents/Justin_Morgan_Resume_Website.pdf" target="_blank">Resume</a>
+            <a class="nav-link" style="font-size: 1.8vh;" href="Documents/Justin_Morgan_Resume(2).pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </div>
