--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
       <div class="navbar-collapse justify-content-center" id="mynavbar">
         <ul class="navbar-nav text-end">
           <li class="nav-item me-md-3">
-            <a class="nav-link" style="font-size: 1.8vh;" href="#aboutMe">About Me</a>
+            <a class="nav-link" style="font-size: clamp(.7rem, 2.5vw, 1.3rem);" href="#aboutMe">About Me</a>
           </li>
           <li class="nav-item me-md-3">
-            <a class="nav-link" style="font-size: 1.8vh;" href="#portfolio">Projects</a>
+            <a class="nav-link" style="font-size: (.7rem, 2.5vw, 1.3rem);" href="#portfolio">Projects</a>
           </li>
           <li class="nav-item me-md-3">
-            <a class="nav-link" style="font-size: 1.8vh;" href="#Skills-and-Experience">Skills & Experience</a>
+            <a class="nav-link" style="font-size: (.7rem, 2.5vw, 1.3rem);" href="#Skills-and-Experience">Skills & Experience</a>
           </li>
           <li class="nav-item me-md-3">
-            <a class="nav-link" style="font-size: 1.8vh;" href="Documents/Justin_Morgan_Resume (2).pdf" target="_blank">Resume</a>
+            <a class="nav-link" style="font-size: (.7rem, 2.5vw, 1.3rem);" href="Documents/Justin_Morgan_Resume (2).pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </div>
@@ -167,12 +167,6 @@
           <span class="skill-per"></span>
         </div>
       </div>
-      <div class="skill-box">
-        <span class="title ">Python</span>
-        <div class="skill-bar">
-          <span class="skill-per"></span>
-        </div>
-      </div>
     </div>
     <div class="computerNerd col-md-12 col-lg-8 text-center" style="height:50vh;">
       <div id="circle-container">
@@ -237,18 +231,19 @@
             <div class="experiences"> 
               <ul>
                <!-- <li>Played a helpful role in facilitating the migration of our legacy database infrastructure to a modern, scalable cloud-based solution. Optimizing performance, 
-                  improving security, and providing better access for our team, leading to increased efficiency and cost savings for the company.</li> <-->
-                <li>Observed the migration of the company's legacy database infrastructure to a modern, scalable cloud-based solution</li>
+                  improving security, and providing better access for our team, leading to increased efficiency and cost savings for the company.</li> -->
+                <!--<li>Observed the migration of the company's legacy database infrastructure to a modern, scalable cloud-based solution</li> -->
                 <li>Instrumental in optimizing SQL queries and views, resulting in enhanced database performance and efficiency.</li>
                 <li>Immersed in acquiring a profound knowledge of SQL, honing my skills in effectively handling, analyzing, and managing intricate data sets within relational databases.</li>
                 <li>Supported team members by researching best practices, providing insights, and assisting in the implementation of modern database technologies.</li>
+                <li>I have further expanded my skill set by studying for the AWS Developer certification, augmenting my proficiency in optimizing SQL queries and views.</li>
                 <li>More To Come!!!</li>
               </ul>
             </div>
 
-            <span class="skillUsed skillUsed-first">mySQL</span>
+            <span class="skillUsed skillUsed-first">MySQL</span>
             <span class="skillUsed">Jira</span>
-            <span class="skillUsed">Tableau</span>
+            <span class="skillUsed">AWS</span>
           <span class="skillUsed">MSSQL</span>
       </div>
     </div>
