--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <a class="nav-link" style="font-size: clamp(.7rem, 2.5vw, 1.3rem);" href="#aboutMe">About Me</a>
           </li>
           <li class="nav-item me-md-3">
-            <a class="nav-link" style="font-size: (.7rem, 2.5vw, 1.3rem);" href="#portfolio">Projects</a>
+            <a class="nav-link" style="font-size: clamp(.7rem, 2.5vw, 1.3rem);" href="#portfolio">Projects</a>
           </li>
           <li class="nav-item me-md-3">
-            <a class="nav-link" style="font-size: (.7rem, 2.5vw, 1.3rem);" href="#Skills-and-Experience">Skills & Experience</a>
+            <a class="nav-link" style="font-size: clamp(.7rem, 2.5vw, 1.3rem);" href="#Skills-and-Experience">Skills & Experience</a>
           </li>
           <li class="nav-item me-md-3">
-            <a class="nav-link" style="font-size: (.7rem, 2.5vw, 1.3rem);" href="Documents/Justin_Morgan_Resume (2).pdf" target="_blank">Resume</a>
+            <a class="nav-link" style="font-size: clamp(.7rem, 2.5vw, 1.3rem);" href="Documents/Justin_Morgan_Resume (2).pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </div>
