--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
         <div class="card" data-tilt>
           <div class="content">
-            <h3>Project One</h3>
-            <p>Under Construction</p>
+            <h3>Algebra Calculator</h3>
+            <p>An algebra calculator capable of solving anywhere from simple equations all the way up to single variable equations.</p>
             <a href="#">Read More</a>
           </div>
         </div>
