--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
     <div class="row pt-3">
       <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
         <div class="card" data-tilt>
+          <div class="calc-wrapper">
+            <img src="picture/—Pngtree—calculator digital calculator illustration_4507357.png" alt="Calculator Image">
+          </div>
           <div class="content">
+            <img src="picture/—Pngtree—calculator digital calculator illustration_4507357.png" style="width:3vh "alt="Calculator Image">
             <h3>Algebra Calculator</h3>
             <p>An algebra calculator capable of solving anywhere from simple equations all the way up to single variable equations.</p>
             <a href="#">Read More</a>
