--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         Passionate about technology and driven to innovate. Committed to transforming complex problems into elegant solutions
       </p>
       <div class="Lets_talk_main" style="font-size: clamp(1.3rem, 2vw, 1.2rem); margin-top: 3rem;">
-        <a class="button" href="mailto:jjmorgan102@yahoo.com">Let's Talk</a>
+        <a class="button" href="mailto:justincodeemail@gmail.com">Let's Talk</a>
         <a class="PgButton" href="#portfolio">View My Projects</a>
       </div>
     </div>
@@ -269,7 +269,7 @@
          <div class="footerRole">Software Engineer</div>
       </div>
       <div class="footerEmail ">Email: 
-        <div class="footerEmailName ">JJmorgan102@yahoo.com</div>
+        <div class="footerEmailName ">justincodeemail@gmail.com</div>
       </div>
     </div>
 
@@ -277,7 +277,7 @@
         <div class="footerText ">Let's make <br>something together!
           <div class="footerlmText ">I am eager to explore potential collaborations and am always <span class="mediaQueryFooter">on the lookout for new and exciting opportunities to grow and innovate. </span></div>
           <button class="footerButton">
-            <a href="mailto:jjmorgan102@yahoo.com">Let's Talk</a>
+            <a href="mailto:justincodeemail@gmail.com">Let's Talk</a>
           </button>
         </div>
           <div class="footerFollowMe "> Follow me:
