--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" style="font-size: clamp(.7rem, 2.5vw, 1.3rem);" href="#Skills-and-Experience">Skills & Experience</a>
           </li>
           <li class="nav-item me-md-3">
-            <a class="nav-link" style="font-size: clamp(.7rem, 2.5vw, 1.3rem);" href="Documents/Justin_Morgan_Resume (2).pdf" target="_blank">Resume</a>
+            <a class="nav-link" style="font-size: clamp(.7rem, 2.5vw, 1.3rem);" href="Documents/Justin_Morgan_Resume.pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </div>
