Update calculator GitHub link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <img src="picture/—Pngtree—calculator digital calculator illustration_4507357.png" style="width:3vh "alt="Calculator Image">
             <h3>Algebra Calculator</h3>
             <p>An algebra calculator capable of solving anything from simple equations all the way up to single variable equations.</p>
-            <a href="https://github.com/ItzClamy/AlgebraCalculator" target="_blank">Read More</a>
+            <a href="https://github.com/ItzClamy/Calculator" target="_blank">Read More</a>
           </div>
         </div>
       </div>
