Update Axciom job description
changed from I have further expanded my skill set by studying for the AWS Developer certification, augmenting my proficiency in optimizing SQL queries and views. to Understanding of third-party APIs and authentication techniques, including OAuth and API keys, complemented by a decent understanding in RESTful and SOAP service methodologies

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <li>Instrumental in optimizing SQL queries and views, resulting in enhanced database performance and efficiency.</li>
                 <li>Immersed in acquiring a profound knowledge of SQL, honing my skills in effectively handling, analyzing, and managing intricate data sets within relational databases.</li>
                 <li>Supported team members by researching best practices, providing insights, and assisting in the implementation of modern database technologies.</li>
-                <li>I have further expanded my skill set by studying for the AWS Developer certification, augmenting my proficiency in optimizing SQL queries and views.</li>
+                <li>Understanding of third-party APIs and authentication techniques, including OAuth and API keys, complemented by a decent understanding in RESTful and SOAP service methodolgies</li>
                 <li>More To Come!!!</li>
               </ul>
             </div>
