--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
             <div class="skillsUsedMedia">
               <div class="skillUsed skillUsed-first">C++</div>
               <div class="skillUsed">Data Structures</div>
+              <div class="skillUsed">Algorithms</div>
+              <div class="skillUsed">GitHub</div>
             </div>
         </div>
       </div>
@@ -245,9 +247,9 @@
             </div>
 
             <span class="skillUsed skillUsed-first">MySQL</span>
-            <span class="skillUsed">Jira</span>
-            <span class="skillUsed">AWS</span>
-          <span class="skillUsed">MSSQL</span>
+            <span class="skillUsed">Agile Practices</span>
+            <span class="skillUsed">ServiceNow</span>
+          <span class="skillUsed">SnapLogic</span>
       </div>
     </div>
   </div>
