--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="content">
             <img src="picture/—Pngtree—calculator digital calculator illustration_4507357.png" style="width:3vh "alt="Calculator Image">
             <h3>Algebra Calculator</h3>
-            <p>An algebra calculator capable of solving anything from simple equations all the way up to single variable equations.</p>
+            <p>Algebra calculator adept at deciphering mathematical equations, leveraging binary tree algorithms and a token mechanism.</p>
             <a href="https://github.com/ItzClamy/Calculator" target="_blank">Read More</a>
           </div>
         </div>
