--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
 <!--About Me Section-->
 <section id="aboutMe">
-  <div class="container-fluid custom-mt">
+  <div class="container-fluid custom-mt border">
     <div class="row">
-      <div class="col-lg-8 col-md-2 col-sm-10 mx-auto text-center" style="padding-left: 0;">
+      <div class="col-lg-8 col-md-10 col-sm-10 mx-auto text-center" style="padding-left: 0;">
         <p class="colored-words text-lg-center text-sm-left text-xs-left" style="font-size: clamp(1.3rem, 2vw, 1.2rem);">
           <span class="colored-word text-center" style="font-size:4vh;">About Me</span>
           <br><br>
